--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading!</h1>
-<p>Hey. I'm a paragraph element! Cool, huh?</p>
-<a href="https://google.com" target="_blank" title="Let's go to Google!">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey. I'm a big heading!</h1>
+	<p>Hey. I'm a <b>paragraph</b> element! Cool, huh?</p>
+	<a href="https://google.com" target="_blank" title="Let's go to Google!">Click me! I'm a link!</a>
+	<p>My name is:<br>
+		<b>Kitty Kat</b></p>
+	<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.m2R7M10Yf39mxXB9raZyOQHaHa%26pid%3DApi&f=1">
+</body>
+</html>
