Wrote the CSS for our character's website (and changed some HTML)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Saiki Kusuo</title>
 	<link rel="icon" href="https://i.pinimg.com/736x/7b/65/70/7b657077bdbb093d9612aaff4c441148.jpg">
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">  
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
@@ -17,8 +19,8 @@
 	<main>
 		<h2>About Saiki</h2>
 		<p>Saiki is awesome! He's the quiet kid with the brightest mind and best of intentions. 「やれやれ」 is something he says quite often!</p>
-		<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.hB5K1FP9W8x2pp3jogkTegHaEK%26pid%3DApi&f=1">
-		<p>Saiki and his friends</p>
+		<img src="https://wallpapercave.com/wp/wp3192591.jpg">
+		<p class="caption">Saiki and his friends</p>
 
 		<!-- Characteristics -->
 		<h2>Saiki's Characteristics</h2>
