Added some comments

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<!-- header element -->
+	<!-- comments written with "CTRL" + "/" -->
 	<header>
 		<img src="https://i.pinimg.com/736x/7b/65/70/7b657077bdbb093d9612aaff4c441148.jpg">
 		<h1>Saiki Kusuo</h1>
